test version 2 using python

--- a/templates/etc/letsencrypt/cli.ini
+++ b/templates/etc/letsencrypt/cli.ini
@@ -4,7 +4,7 @@ max-log-backups = 0
 
 authenticator = dns-cloudflare
 
-email = {{SSL_NOTIFICTION_EMAIL}}
+email = {{notify_email}}
 
 dns-cloudflare-credentials = /etc/letsencrypt/cloudflare.ini
 
