--- a/templates/etc/nginx/custom/http.conf
+++ b/templates/etc/nginx/custom/http.conf
@@ -6,31 +6,31 @@ server {
     }
 
     listen      443 ssl;
-    server_name {{AUTOMATE_DOMAIN}};
+    server_name {{site_domain}};
     include     /etc/nginx/custom/ssl.conf;    
     include     /etc/nginx/custom/robots.conf;
     access_log  /var/log/nginx/automate.https.log main buffer=32k flush=5m;
 
     location / {
-        proxy_pass https://{{AUTOMATE_INTERNAL_IP}};
+        proxy_pass https://{{automate_ip}};
     }
 
     location ~* ^/wcc2 {
-        allow {{WHITELIST_EXTERNAL_IP}};
+        allow {{whitelist_ip}};
         deny all;
-        proxy_pass https://{{AUTOMATE_INTERNAL_IP}};
+        proxy_pass https://{{automate_ip}};
     }
 
     location ~* ^/labtech/myip.aspx {
-        allow {{WHITELIST_EXTERNAL_IP}};
+        allow {{whitelist_ip}};
         deny all;
-        proxy_pass https://{{AUTOMATE_INTERNAL_IP}};
+        proxy_pass https://{{automate_ip}};
     }
 
     location ~* ^/labtech/controlcenter.asmx {
-        allow {{WHITELIST_EXTERNAL_IP}};
+        allow {{whitelist_ip}};
         deny all;
-        proxy_pass https://{{AUTOMATE_INTERNAL_IP}};
+        proxy_pass https://{{automate_ip}};
     }
 
     location ~* ^/labtech/mobile {
@@ -69,8 +69,8 @@ server {
         return 444;
     }
 
-    listen      {{CONTROL_PORT}} ssl;
-    server_name {{AUTOMATE_DOMAIN}};
+    listen      {{control_port}} ssl;
+    server_name {{site_domain}};
     include     /etc/nginx/custom/ssl.conf;
     include     /etc/nginx/custom/compress.conf;    
     include     /etc/nginx/custom/robots.conf;
@@ -78,14 +78,14 @@ server {
 
     location / {
         proxy_pass_header Server;
-        proxy_pass https://{{AUTOMATE_INTERNAL_IP}}:{{CONTROL_PORT}};
+        proxy_pass https://{{automate_ip}}:{{control_port}};
     }
 
     location ~* ^/administration {
-        allow {{WHITELIST_EXTERNAL_IP}};
+        allow {{whitelist_ip}};
         deny all;
         proxy_pass_header Server;
-        proxy_pass https://{{AUTOMATE_INTERNAL_IP}}:{{CONTROL_PORT}};
+        proxy_pass https://{{automate_ip}}:{{control_port}};
     }
 }
 
@@ -96,12 +96,12 @@ server {
         return 444;
     }
 
-    if ($host = {{AUTOMATE_DOMAIN}}) {
+    if ($host = {{site_domain}}) {
         return 301 https://$host$request_uri;
     }
 
     listen      80;
-    server_name {{AUTOMATE_DOMAIN}};
+    server_name {{site_domain}};
     access_log  /var/log/nginx/automate.http.log main buffer=32k flush=5m;
     return      404;
 }
