--- a/templates/etc/letsencrypt/cloudflare.ini
+++ b/templates/etc/letsencrypt/cloudflare.ini
@@ -1,2 +1,2 @@
-dns_cloudflare_email = {{SSL_CLOUDFLARE_EMAIL}}
-dns_cloudflare_api_key = {{SSL_CLOUDFLARE_APIKEY}}
+dns_cloudflare_email = {{cloudflare_email}}
+dns_cloudflare_api_key = {{cloudflare_apikey}}
