--- a/templates/etc/inner-cert/inner-cert.cnf
+++ b/templates/etc/inner-cert/inner-cert.cnf
@@ -3,6 +3,10 @@ distinguished_name = req_distinguished_name
 req_extensions = v3_req
 
 [req_distinguished_name]
+countryName = Country Name (2 letter code)
+countryName_default = US
+organizationalUnitName = AUTOMATE
+organizationalUnitName_default = AUTOMATE
 commonName = *.{{ssl_domain}}
 commonName_max = 64
 
